    - move debug.tpl to SMARTY_DIR, add to constructor (Monte)
    - fixed warning message in function.assign_debug_info (Monte)
    - fixed $template_dir, $compile_dir, $cache_dir, $config_dir
      to respect include_path (Monte)
    - fixed warning message with output filter array (Monte)
    - add optional 2nd parameter to date_format, used as
      the default date if the passed date is empty (Monte)
    - gave $reset a default value in cycle plugin (Monte)
    - fixed warnings with html_select_date and timestamp
      functions (Monte)
    - added support for sub directory exlusion format (Monte)
    - added support for grouping by cache_id, compile_id
      and segments thereof (Monte)
    - changed cache and compile files to human readable
      format (Monte)
    - remove overlib.js file from distribution (Monte)
    - fixed bug with 304 Not Modified response sending
      content (Monte)
    - fixed cycle function to respect delimiter after
      initial setting (Monte)
    - update $GLOBALS references to work properly with
      track_globals settings (Michal Prinke, Monte)
    - fixed bug in math function with call to assign
      (Grigory V. Kareev, Monte)
    - optimized for loops with count() function calls (Monte)
    - add month_value_format attribute to html_select_date
      plugin (Gary Loescher, Monte) 
    - made it possible to use simple variables inside [] for
      indexing. (Andrei)
    - added "once" attribute to {include_php}. (Monte)

Version 2.1.1
-------------
    - added cycle function. (Monte)
    - fixed bug with resource testing, and include_path. (Monte)
    - fixed a bug with register_outputfilter function. (Monte)

Version 2.1.0
-------------

    - introduced output filters. (Andrei)
    - changed the way filters are loaded, added load_filter()
      API function and $autoload_filters variable. (Andrei)
    - added caching logic for expire times per cache file
      (Norbert Rocher, Monte)