@@ -8,8 +8,8 @@
  * Purpose:  Prints the dropdowns for time selection
  * -------------------------------------------------------------
  */
-require_once SMARTY_DIR . $this->plugins_dir . '/shared.make_timestamp.php';
-require_once SMARTY_DIR . $this->plugins_dir . '/function.html_options.php';
+require_once $this->_get_plugin_filepath('shared','make_timestamp');
+require_once $this->_get_plugin_filepath('function','html_options');
 function smarty_function_html_select_time($params, &$smarty)
 {
     /* Default values. */
